tests/rosetta/transpiler/CS/anagrams-deranged-anagrams.error
dotnet run: exit status 1
/tmp/TestCSTranspiler_Rosetta_Golden1736529797/001/Program.cs(50,22): error CS0019: Operator '>' cannot be applied to operands of type 'string' and 'string' [/tmp/TestCSTranspiler_Rosetta_Golden1736529797/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden1736529797/001/Program.cs(94,24): error CS0266: Cannot implicitly convert type 'object[]' to 'string[]'. An explicit conversion exists (are you missing a cast?) [/tmp/TestCSTranspiler_Rosetta_Golden1736529797/001/app.csproj]

The build failed. Fix the build errors and run again.
